# serializer version: 1
# name: test_button_access_denied[zoe_40][button.reg_number_start_air_conditioner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_start_air_conditioner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start air conditioner',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'start_air_conditioner',
    'unique_id': 'vf1zoe40vin_start_air_conditioner',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_access_denied[zoe_40][button.reg_number_start_air_conditioner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Start air conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_start_air_conditioner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_access_denied[zoe_40][button.reg_number_start_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_start_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'start_charge',
    'unique_id': 'vf1zoe40vin_start_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_access_denied[zoe_40][button.reg_number_start_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Start charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_start_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_access_denied[zoe_40][button.reg_number_stop_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_stop_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stop charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'stop_charge',
    'unique_id': 'vf1zoe40vin_stop_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_access_denied[zoe_40][button.reg_number_stop_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Stop charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_stop_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_empty[zoe_40][button.reg_number_start_air_conditioner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_start_air_conditioner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start air conditioner',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'start_air_conditioner',
    'unique_id': 'vf1zoe40vin_start_air_conditioner',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_empty[zoe_40][button.reg_number_start_air_conditioner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Start air conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_start_air_conditioner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_empty[zoe_40][button.reg_number_start_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_start_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'start_charge',
    'unique_id': 'vf1zoe40vin_start_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_empty[zoe_40][button.reg_number_start_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Start charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_start_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_empty[zoe_40][button.reg_number_stop_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_stop_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stop charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'stop_charge',
    'unique_id': 'vf1zoe40vin_stop_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_empty[zoe_40][button.reg_number_stop_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Stop charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_stop_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_errors[zoe_40][button.reg_number_start_air_conditioner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_start_air_conditioner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start air conditioner',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'start_air_conditioner',
    'unique_id': 'vf1zoe40vin_start_air_conditioner',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_errors[zoe_40][button.reg_number_start_air_conditioner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Start air conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_start_air_conditioner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_errors[zoe_40][button.reg_number_start_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_start_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'start_charge',
    'unique_id': 'vf1zoe40vin_start_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_errors[zoe_40][button.reg_number_start_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Start charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_start_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_errors[zoe_40][button.reg_number_stop_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_stop_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stop charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'stop_charge',
    'unique_id': 'vf1zoe40vin_stop_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_errors[zoe_40][button.reg_number_stop_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Stop charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_stop_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_not_supported[zoe_40][button.reg_number_start_air_conditioner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_start_air_conditioner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start air conditioner',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'start_air_conditioner',
    'unique_id': 'vf1zoe40vin_start_air_conditioner',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_not_supported[zoe_40][button.reg_number_start_air_conditioner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Start air conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_start_air_conditioner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_not_supported[zoe_40][button.reg_number_start_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_start_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'start_charge',
    'unique_id': 'vf1zoe40vin_start_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_not_supported[zoe_40][button.reg_number_start_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Start charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_start_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_not_supported[zoe_40][button.reg_number_stop_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_stop_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stop charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'stop_charge',
    'unique_id': 'vf1zoe40vin_stop_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_not_supported[zoe_40][button.reg_number_stop_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Stop charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_stop_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[captur_fuel][button.reg_number_start_air_conditioner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_start_air_conditioner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start air conditioner',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'start_air_conditioner',
    'unique_id': 'vf1capturfuelvin_start_air_conditioner',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[captur_fuel][button.reg_number_start_air_conditioner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Start air conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_start_air_conditioner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[captur_phev][button.reg_number_start_air_conditioner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_start_air_conditioner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start air conditioner',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'start_air_conditioner',
    'unique_id': 'vf1capturphevvin_start_air_conditioner',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[captur_phev][button.reg_number_start_air_conditioner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Start air conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_start_air_conditioner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[captur_phev][button.reg_number_start_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_start_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'start_charge',
    'unique_id': 'vf1capturphevvin_start_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[captur_phev][button.reg_number_start_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Start charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_start_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[captur_phev][button.reg_number_stop_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_stop_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stop charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'stop_charge',
    'unique_id': 'vf1capturphevvin_stop_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[captur_phev][button.reg_number_stop_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Stop charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_stop_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[twingo_3_electric][button.reg_number_start_air_conditioner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_start_air_conditioner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start air conditioner',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'start_air_conditioner',
    'unique_id': 'vf1twingoiiivin_start_air_conditioner',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[twingo_3_electric][button.reg_number_start_air_conditioner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Start air conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_start_air_conditioner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[twingo_3_electric][button.reg_number_start_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_start_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'start_charge',
    'unique_id': 'vf1twingoiiivin_start_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[twingo_3_electric][button.reg_number_start_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Start charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_start_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[twingo_3_electric][button.reg_number_stop_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_stop_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stop charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'stop_charge',
    'unique_id': 'vf1twingoiiivin_stop_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[twingo_3_electric][button.reg_number_stop_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Stop charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_stop_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[zoe_40][button.reg_number_start_air_conditioner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_start_air_conditioner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start air conditioner',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'start_air_conditioner',
    'unique_id': 'vf1zoe40vin_start_air_conditioner',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[zoe_40][button.reg_number_start_air_conditioner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Start air conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_start_air_conditioner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[zoe_40][button.reg_number_start_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_start_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'start_charge',
    'unique_id': 'vf1zoe40vin_start_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[zoe_40][button.reg_number_start_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Start charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_start_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[zoe_40][button.reg_number_stop_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_stop_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stop charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'stop_charge',
    'unique_id': 'vf1zoe40vin_stop_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[zoe_40][button.reg_number_stop_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Stop charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_stop_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[zoe_50][button.reg_number_start_air_conditioner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_start_air_conditioner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start air conditioner',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'start_air_conditioner',
    'unique_id': 'vf1zoe50vin_start_air_conditioner',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[zoe_50][button.reg_number_start_air_conditioner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Start air conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_start_air_conditioner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[zoe_50][button.reg_number_start_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_start_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'start_charge',
    'unique_id': 'vf1zoe50vin_start_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[zoe_50][button.reg_number_start_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Start charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_start_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[zoe_50][button.reg_number_stop_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_number_stop_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stop charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'stop_charge',
    'unique_id': 'vf1zoe50vin_stop_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[zoe_50][button.reg_number_stop_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Stop charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_number_stop_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
